# upstageailab-cv-classification-cv_1

./: .gitignore  AGENTS.md  PRD.md  README.md  check_gpu.py  environment.yml  pyproject.toml  run.sh
PRPs/: argument_cache_prp.md
code/: EDA.ipynb  Final.ipynb  Inference.py  Load_Data.py  Models-Final.ipynb  Models-V1.ipynb  Models-V2.ipynb  Models-V3.ipynb  Models-V4.ipynb  Moon.ipynb  Preprocess.py  PseudoLabel.py  Train.py  baseline_code.py
code/Moon/: Final.ipynb
code/augmentation/: README.md  adaptive_augmentation.py  adaptive_dataset.py  main.py  quick_start.py  requirements.txt  test_data_analyzer.py
code/baseline/: baseline_code_with_log.py
code/exp1/: baseline_code_v3_kfold.py
code/exp2/: baseline_code_v4_advanced.py  baseline_code_v5_advanced_kfold.py  baseline_code_v5_advanced_kfold_tta2.py
code/exp3/: exp3_main.py
code/jupyter_notebooks/: EDA.ipynb  baseline_code.ipynb  image_analysis_results.csv  image_augmentation_analysis.ipynb  jhryu_eda_img_size.ipynb
code/seung_notebook/: baseline_info.md  baseline_valid_transform_code.ipynb  train_eda_advenced.ipynb
code/v1/: baseline_code_v2_holdout.py
code/v2/: baseline_code_v4_advanced_tta2.py  requirements.txt  (+7 more)
docs/: ppt_draft.md
input/: extract.sh  get_data.sh
ppt/: inspect_ppt.py  modify.md  notes.md  presentation.html  update_ppt_preserve_format.py
seung_notebook/: baseline_code.py  test_eda.ipynb  train_eda_advenced.ipynb  train_transform.py
src/: augment.py  data.py  env_template.txt  fix_cache_images.py  inference.py  log_util.py  main.py  models.py  training.py  utils.py
(+139 files in other folders)
