[project]
name = "upstageailab-cv-classification-cv-1-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "timm>=1.0.16",
    "transformers>=4.53.0",
]
