[project]
name = "upstageailab-cv-classification-cv-1-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "albumentations==1.3.1",
    "hydra-core>=1.3.2",
    "numpy==1.26.0",
    "omegaconf>=2.3.0",
    "pandas==2.1.4",
    "python-dotenv>=1.1.1",
    "timm==0.9.12",
    "torch==2.1.0",
    "torchaudio==2.1.0",
    "torchvision==0.16.0",
    "wandb>=0.21.0",
]
